working clipboard functions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="ieee754_styles.css">
 </head>
 <body>
+    <center>
     <div id="main-flow">
         <div id="upper-flow">
             <div id="input-fields-flow">
@@ -99,6 +100,7 @@
             <i>normalized</i>
         </div>
     </div>
+    </center>
     <script type="module" src="script.js"/>
 </body>
 </html>
