working labels WIP

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="checkboxes-row">
                     <input id="sign-bit" type="checkbox">
                 </div>
-                <label class="checkboxes-group-text">-</label>
+                <label id="sign-bit-text" class="checkboxes-group-text">-</label>
             </div>
             <div class="checkboxes-group">
                 <label class="checkboxes-group-name">Exponent</label>
@@ -64,7 +64,7 @@
                     <input id="exponent-bit-1" class="exponent-bit" type="checkbox">
                     <input id="exponent-bit-0" class="exponent-bit" type="checkbox">
                 </div>
-                <label class="checkboxes-group-text">2<sup>2</sup></label>
+                <label id="exponent-bits-text" class="checkboxes-group-text">2<sup>2</sup></label>
             </div>
             <div class="checkboxes-group">
                 <label class="checkboxes-group-name">Mantissa</label>
@@ -93,7 +93,7 @@
                     <input id="mantissa-bit-1" class="mantissa-bit" type="checkbox">
                     <input id="mantissa-bit-0" class="mantissa-bit" type="checkbox">
                 </div>
-                <label class="checkboxes-group-text">1.5</label>
+                <label id="mantissa-bits-text" class="checkboxes-group-text">1.5</label>
             </div>
         </div>
         <div id="normalized-section">
