universal behaviour for all bit layout types

--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
     <div id="main-flow">
         <div id="upper-flow">
             <div id="input-fields-flow">
-                <div id="input-fields-row-flow">
+                <div id="dec-fields-row" class="input-fields-row-flow">
                     <input id="dec-input-field" type="text" value="1.0">
                 </div>
-                <div id="input-fields-row-flow">
-                    <input id="bin-input-field-0" class="bin-input-field" type="text" value="0011">
+                <div id="bin-fields-row" class="input-fields-row-flow">
+                    <!-- DYNAMIC CONTENT -->
+                    <!-- <input id="bin-input-field-0" class="bin-input-field" type="text" value="0011">
                     <input id="bin-input-field-1" class="bin-input-field" type="text" value="1111">
                     <input id="bin-input-field-2" class="bin-input-field" type="text" value="1000">
                     <input id="bin-input-field-3" class="bin-input-field" type="text" value="0000">
                     <input id="bin-input-field-4" class="bin-input-field" type="text" value="0000">
                     <input id="bin-input-field-5" class="bin-input-field" type="text" value="0000">
                     <input id="bin-input-field-6" class="bin-input-field" type="text" value="0000">
-                    <input id="bin-input-field-7" class="bin-input-field" type="text" value="0000">
+                    <input id="bin-input-field-7" class="bin-input-field" type="text" value="0000"> -->
                 </div>
-                <div id="input-fields-row-flow">
-                    <input id="hex-input-field-0" class="hex-input-field" type="text" value="3F80">
-                    <input id="hex-input-field-1" class="hex-input-field" type="text" value="0000">
+                <div id="hex-fields-row" class="input-fields-row-flow">
+                    <!-- DYNAMIC CONTENT -->
+                    <!-- <input id="hex-input-field-0" class="hex-input-field" type="text" value="3F80">
+                    <input id="hex-input-field-1" class="hex-input-field" type="text" value="0000"> -->
                 </div>
             </div>
             <div id="copy-buttons-flow">
@@ -47,29 +49,32 @@
         <div id="bits-flow">
             <div class="checkboxes-group">
                 <label class="checkboxes-group-name">Sign</label>
-                <div class="checkboxes-row">
-                    <input id="sign-bit" type="checkbox">
+                <div id="sign-checkboxes-row" class="checkboxes-row">
+                    <!-- DYNAMIC CONTENT -->
+                    <!-- <input id="sign-bit" class="sign-bit" type="checkbox"> -->
                 </div>
                 <label id="sign-bit-text" class="checkboxes-group-text">-</label>
             </div>
             <div class="checkboxes-group">
                 <label class="checkboxes-group-name">Exponent</label>
-                <div class="checkboxes-row">
-                    <input id="exponent-bit-7" class="exponent-bit" type="checkbox">
+                <div id="exponent-checkboxes-row" class="checkboxes-row">
+                    <!-- DYNAMIC CONTENT -->
+                    <!-- <input id="exponent-bit-7" class="exponent-bit" type="checkbox">
                     <input id="exponent-bit-6" class="exponent-bit" type="checkbox">
                     <input id="exponent-bit-5" class="exponent-bit" type="checkbox">
                     <input id="exponent-bit-4" class="exponent-bit" type="checkbox">
                     <input id="exponent-bit-3" class="exponent-bit" type="checkbox">
                     <input id="exponent-bit-2" class="exponent-bit" type="checkbox">
                     <input id="exponent-bit-1" class="exponent-bit" type="checkbox">
-                    <input id="exponent-bit-0" class="exponent-bit" type="checkbox">
+                    <input id="exponent-bit-0" class="exponent-bit" type="checkbox"> -->
                 </div>
                 <label id="exponent-bits-text" class="checkboxes-group-text">2<sup>2</sup></label>
             </div>
             <div class="checkboxes-group">
                 <label class="checkboxes-group-name">Mantissa</label>
-                <div class="checkboxes-row">
-                    <input id="mantissa-bit-22" class="mantissa-bit" type="checkbox">
+                <div id="mantissa-checkboxes-row" class="checkboxes-row">
+                    <!-- DYNAMIC CONTENT -->
+                    <!-- <input id="mantissa-bit-22" class="mantissa-bit" type="checkbox">
                     <input id="mantissa-bit-21" class="mantissa-bit" type="checkbox">
                     <input id="mantissa-bit-20" class="mantissa-bit" type="checkbox">
                     <input id="mantissa-bit-19" class="mantissa-bit" type="checkbox">
@@ -91,7 +96,7 @@
                     <input id="mantissa-bit-3" class="mantissa-bit" type="checkbox">
                     <input id="mantissa-bit-2" class="mantissa-bit" type="checkbox">
                     <input id="mantissa-bit-1" class="mantissa-bit" type="checkbox">
-                    <input id="mantissa-bit-0" class="mantissa-bit" type="checkbox">
+                    <input id="mantissa-bit-0" class="mantissa-bit" type="checkbox"> -->
                 </div>
                 <label id="mantissa-bits-text" class="checkboxes-group-text">1.5</label>
             </div>
@@ -100,6 +105,23 @@
             <i>normalized</i>
         </div>
     </div>
+
+    <br>
+
+    <label for="layout">Layot:</label>
+    <select name="layout" id="layout-combo">
+        <option value="Float16">Float16</option>
+        <option value="Float32" selected>Float32</option>
+        <option value="Float64">Float64</option>
+        <option value="Float128">Float128</option>
+        <option value="Float256">Float256</option>
+
+        <option value="Fp8E4M3">FP8 E4M3</option>
+        <option value="Fp8E5M2">FP8 E5M2</option>
+
+        <option value="BFloat16">BFloat16</option>
+        <option value="TensorFloat32">TensorFloat32</option>
+    </select>
     </center>
     <script type="module" src="script.js"/>
 </body>
