fix not working page for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <option value="TensorFloat32">TensorFloat32</option>
     </select>
     </center>
-    <script type="module" src="script.js"/>
+    <script type="module" src="./script.js"/></script>
 </body>
 </html>
 
